--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,24 @@ body {
 
 #floatingQR {
     position: absolute;
-    top: 0;
+    bottom: 0;
     right: 0;
     border-style: solid;
     border-color: RGB(30,77,43);
     height:fit-content;
-    border-radius: 2%;
+    border-top-left-radius: 2%;
     background-color: RGB(30,77,43);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-h1 {
-    font-size: 18;
+#floatingQR img {
+    height: 200px;
+}
+
+h2 {
+    font-size: 10;
     color: RGB(200, 195, 114);
     text-align:center;
     font-family:Arial, Helvetica, sans-serif;
