Added dropdown bars. Changing nav - dropdown will dictate location

--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,39 @@
-html,
-body,
-div,
-iframe {
-    margin: 0px;
-    padding: 0px;
-    height: 100%;
+body {
+    background-color: RGB(30,77,43);
+    margin: 0;
+    padding: 0;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
 }
 
 #mapFrame {
-    display: block;
     height: 100vh;
     width: 100vw;
-    border: none;
     position: relative;
-}
-
-body {
-    background-color: RGB(30,77,43);
-}
-
-#floatingQR {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border-style: solid;
-    border-color: RGB(30,77,43);
-    height:fit-content;
-    border-top-left-radius: 2%;
-    background-color: RGB(30,77,43);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    border: none;
 }
 
 #bottombar {
-    position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 40px;
+    position: fixed;
     background-color: RGB(30,77,43);
     z-index: 99;
+    height: 80px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#floatingQR img {
-    height: 200px;
+
+
+#navbuttons {
+
 }
 
 h2 {
