--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
 }
 
 #mapFrame {
@@ -36,11 +35,13 @@ body {
     position: fixed;
     background-color: RGB(30,77,43);
     z-index: 99;
-    height: 80px;
+    height: 100px;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 #navbuttons {
@@ -73,4 +74,10 @@ h2 {
     font-family:Arial, Helvetica, sans-serif;
     margin: 0;
     background-color: RGB(30,77,43);
+}
+
+p {
+    font-size: 22px;
+    color: RGB(200, 195, 114);
+    margin-top: 5px;
 }
