--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,6 @@ h2 {
 p {
     font-size: 22px;
     color: RGB(200, 195, 114);
-    margin-top: 5px;
+    margin: 5px;
     font-family:Arial, Helvetica, sans-serif;
 }
