--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,10 @@ body {
 }
 
 #mapFrame {
-    height: 100vh;
-    width: 100vw;
-    position: relative;
+    position:absolute; left:-25%;
+    height: 100%;
+    width: 125%;
+    overflow: hidden;
     border: none;
 }
 
@@ -81,4 +82,21 @@ p {
     color: RGB(200, 195, 114);
     margin: 5px;
     font-family:Arial, Helvetica, sans-serif;
+}
+
+#adaCheck {
+    width: 30px;
+    height: 30px;
+}
+
+#adaIcon {
+    width: 35px;
+    height: 35px;
+}
+
+#adaBox {
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
 }
