--- a/styles.css
+++ b/styles.css
@@ -23,24 +23,26 @@ body {
     align-items: center;
 }
 
-/* Portrait
+/* Portrait */
 #mapFrame {
-    position:absolute; left:-43.5%;
+    position:absolute;
+    left:-43.5%;
     height: 100%;
     width: 143.5%;
     overflow: hidden;
     border: none;
 }
-*/
+
 
 /*Landscape*/
-#mapFrame {
-    position:absolute; left:-24.5%;
+/* #mapFrame {
+    position:absolute;
+    left:-24.5%;
     height: 100%;
     width: 124.5%;
     overflow: hidden;
     border: none;
-}
+} */
 
 #bottombar {
     bottom: 0;
