--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -15,7 +15,7 @@ body {
     top: 0;
     position: fixed;
     background-color: RGB(30,77,43);
-    z-index: 98;
+    z-index: 97;
     height: 40px;
     width: 100vw;
     display: flex;
@@ -44,7 +44,7 @@ body {
     bottom: 0;
     position: fixed;
     background-color: RGB(30,77,43);
-    z-index: 99;
+    z-index: 98;
     height: 100px;
     width: 100vw;
     display: flex;
@@ -110,3 +110,47 @@ p {
     touch-action: pan-x pan-y;
     height: 100% 
 }
+
+#touchContainer {
+    background-color: rgba(128,128,128, 0.3);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+}
+
+#touchNotice {
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-family: 'factoria-book', sans-serif;
+    background-color: rgba(78, 78, 78, 0.9);;
+    height: 300px;
+    width: 450px;
+    border-radius: 30px;
+}
+
+#touchNotice>img {
+    height: 180px;
+    width: 180px;
+    filter: brightness(0) invert(1);
+    animation: moveUpDown 2s ease-in-out infinite;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+
+@keyframes moveUpDown {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
