--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -117,21 +117,35 @@ p {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 99;
+    font-family: 'factoria-book', sans-serif;
+    color: white;
+}
+
+#touchDirections {
+    text-align: center;
+}
+
+#touchDirections>h1 {
+    font-size: 6rem;
+    padding: 0;
+    margin: 20px;
 }
 
 #touchNotice {
     display: flex;
-    color: white;
     justify-content: center;
+    padding: 30px;
     align-items: center;
-    font-family: 'factoria-book', sans-serif;
+    flex-direction: column;
     background-color: rgba(78, 78, 78, 0.9);;
-    height: 300px;
-    width: 450px;
+    height: auto;
+    width: auto;
     border-radius: 30px;
+    text-shadow: 3px 3px 10px black;
 }
 
 #touchNotice>img {
